# GL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  init.py
modules/: CMakeLists.txt
modules/cmake/include/: glad.cmake  include.cmake
src/: CMakeLists.txt  GLApp.cpp  main.cpp
src/Application/: Application.hpp  GLApplication.cpp  GLApplication.hpp
src/GBuffer/: GBuffer.cpp  GBuffer.hpp
src/Shader/: GLShader.cpp  GLShader.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp
src/Shaders/: FragmentShader.glsl  VertexShader.glsl
src/Types/: Types.hpp
src/Window/: GLWindow.cpp  GLWindow.hpp  Window.cpp  Window.hpp
src/include/: Types.hpp
